@@ -7004,3 +7004,7 @@ PACKAGE: 2.2.99.2
  * Changed user check to be overridable by a use() pragma: "no_check_user"
  * Made test_config cross-platform with a new Platform call: "read_perl_script"
 
+2008-02-25 tdb
+ * Don't squash ordervalues where a dataset is !indexable
+ * Truncate ordervalues values before insertion
+
